fix: recaptcha visibility

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -10,6 +10,9 @@
  * Copyright 2011-2022 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+
+.grecaptcha-badge { visibility: hidden; }
+
 :root {
     --bs-blue: #0d6efd;
     --bs-indigo: #6610f2;
